--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-REDIS_HOST=localhost
+REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
-REDIS_PASSWORD=<your-redis-password-if-any>  # Leave blank if none
-PORT=3000  # Backend server port
+REDIS_PASSWORD=your_redis_password
+PORT=5000
