feat: add env varible frontend

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-REDIS_HOST=127.0.0.1
-REDIS_PORT=6379
-REDIS_PASSWORD=your_redis_password
+REDIS_HOST=redis-16075.c301.ap-south-1-1.ec2.redns.redis-cloud.com
+REDIS_PORT=16075
+REDIS_PASSWORD=y6v2qxllMOoM6YEnwHJMo0ndSI49xsGA
 PORT=5000
